<resources>
    <!--<string name="app_name">tenstadoessecarai</string>-->
    <string name="adicionar_endere_o_adicional">Adicionar endereço adicional</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="telefone">Telefone</string>
    <string name="endere_o">Endereço</string>
    <string name="endereço">Endereço</string>
    <string name="endereço_adicional">Endereço adicional</string>
    <string name="mini_currículo">Mini currículo</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="name_app">Sorriso24H</string>
    <string name="cadastro_realizado">Cadastro Realizado Com Sucesso!</string>
    <string name="login">Login</string>
    <string name="escreva_aqui">Escreva aqui</string>
    <string name="voltar">Voltar</string>
    <string name="msg_token_fmt" />
    <string name="lista_emergencias">Lista de Emergências</string>
    <string name="logout">Logout</string>
    <string name="lista_emergen">Lista de Emergências</string>
    <string name="sem_emergencias">Sem emergencias no momento!</string>
    <string name="aguarde">Aguarde...</string>
    <string name="empty">...</string>
    <string name="detalhes_da_conta">Detalhes da Conta</string>
    <string name="hist_rico_de_emerg_ncias">Histórico de Atendimentos</string>
    <string name="atendimento_pendente">Atendimento Pendente</string>
    <string name="ol">Olá,</string>
    <string name="escolha_a_localiza_o_que_deseja_enviar">Escolha a localização que deseja enviar:</string>
    <string name="localiza_o_atual">Localização atual</string>
    <string name="endere_os">Endereços</string>
    <string name="avalia_o">Avaliação</string>
    <string name="nota_para_o_dentista">Nota para o Dentista:</string>
    <string name="nota_para_o_app">Nota para o App:</string>
    <string name="coment_rio_sobre_o_atendimento">Comentário sobre o atendimento</string>
    <string name="detalhes_do_atendimento">Detalhes do Atendimento</string>
    <string name="coment_rio_sobre_o_app">Comentário sobre o App</string>
</resources>